2007-01-17  Tor Lillqvist  <tml@novell.com>

	* glib-zip.in: DLLs are always installed in "bin" with current
	libtool, drop unnecessary logic to check where they are. Include
	also the COPYING file.

2007-01-17  Tor Lillqvist  <tml@novell.com>

	* glib/galloca.h: Use <malloc.h> also with Digital Mars compiler
	on Win32. (#346808, Serhat Sevki Dincer)

2007-01-16  Matthias Clasen  <mclasen@redhat.com>

	* glib/gthread.h:
	* glib/gthread.c:
	* glib/glib.symbols: Revert an accidental ABI break by
	moving gettime out of the GThreadFunctions struct and making
	it a separate variable.  (#397139, Joe Marcus Clarke)

	* gthread/*.c: Adapt.

2007-01-16  Tor Lillqvist  <tml@novell.com>

	* glib/gthread.c (gettime): GetSystemTimeAsFileTime() returns 100s
	of nanoseconds since 1601, so offset to Unix epoch (1970) and
	multiply by 100 to get nanoseconds which is what we want.

2007-01-15  Tor Lillqvist  <tml@novell.com>

	* glib/gmain.h (struct _GPollFD): Fix mistake in my last commit.

2005-01-15  Matthias Clasen  <mclasen@redhat.com>

	* glib/giochannel.c:
	* glib/gbookmarkfile.c: Remove redundant NULL-checks.
	(#369668, Morten Welinder)

2005-01-15  Matthias Clasen  <mclasen@redhat.com>

	* glib/gthread.c:
	* gthread/gthread-posix.c: Correct the gettime calculations
	once more.  (#395203, Chris Wilson)

2007-01-15  Tor Lillqvist  <tml@novell.com>

	* glib/gmain.h (struct _GPollFD): Prepare for potential Win64
	build: Use gint64 for the fd field on Win64, as we want to be able
	to store a HANDLE in it. (#395422) (Other changes will surely also
	be necessary when building on Win64, at least in giowin32.c.)

2007-01-15  Tor Lillqvist  <tml@novell.com>

	* glib/gwin32.c (g_win32_getlocale): Simplify greatly. Instead of
	hardcoding a large switch statement, just ask Windows for the
	ISO639 and ISO3166 codes. Tack on @Latn or @Cyrl for those
	languages which can alternatively be written in Latin or
	Cyrillic. Fixes #395419.

2007-01-12  Matthias Clasen  <mclasen@redhat.com>
